src/test/deca/context/valid/objet/method-call.deca
// Description:
//    Condition de la règle 3.42 non respectée 
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 10 : New is only for classes
//

class A{
    void get(){

    }
}
{
    A a = new A();
    a.get();
}